fix: adapt wrap toggle for pretty-code

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -176,32 +176,12 @@ article img {
 	@apply rounded-lg;
 }
 
-html.dark .shiki,
-html.dark .shiki span {
-	color: var(--shiki-dark);
-	background-color: var(--shiki-dark-bg);
-}
-.shiki,
-.shiki span {
-	color: var(--shiki-light);
-	background-color: var(--shiki-light-bg);
-}
-
 pre.with-title .copy-button {
 	@apply top-4;
 }
 
 pre {
 	@apply border dark:border-gray-700 border-gray-200 rounded-md;
-}
-
-code .diff,
-code .line.highlighted {
-	transition: background-color 0.5s;
-	margin: 0 -24px;
-	padding: 2.5px 24px;
-	width: calc(100% + 48px);
-	display: inline-block;
 }
 
 code .diff.add {
@@ -257,7 +237,7 @@ span.highlighted-word {
 	opacity: 1;
 }
 
-html[data-word-wrap] .shiki {
+html[data-word-wrap] pre {
 	word-break: break-word;
 	@apply whitespace-pre-wrap md:whitespace-pre;
 }
